--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">WeChat</string>
+    <string name="adunit_id">ca-app-pub-3940256099942544/2247696110</string>
 </resources>
