--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,5 +67,6 @@
     <string name="notification_body">hey!! write a post now and share it with your friends</string>
     <string name="notification_channel">reminder notification channel</string>
     <string name="settings">Settings</string>
+    <string name="startChat">startChat</string>
 
 </resources>
