fix order of posts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="ahmedkhaled">Ahmed Khaled</string>
     <string name="helloworld">hello world</string>
     <string name="add">Add</string>
-    <string name="write_a_psost">write a psost ....</string>
+    <string name="write_a_psost">write a post ....</string>
     <string name="thisisasamplepost">this is a sample post</string>
     <string name="sender_name">sender name</string>
     <string name="a">A</string>
