push notification on commenting on posts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,5 +68,6 @@
     <string name="notification_channel">reminder notification channel</string>
     <string name="settings">Settings</string>
     <string name="startChat">startChat</string>
+    <string name="channelDescription">notification channel fro delivering push notification</string>
 
 </resources>
